--- a/MainWindow.ui
+++ b/MainWindow.ui
@@ -42,9 +42,9 @@
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>750</y>
-      <width>681</width>
-      <height>91</height>
+      <y>730</y>
+      <width>791</width>
+      <height>101</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -173,6 +173,43 @@ background-color: rgb(179,250, 250);
      </property>
      <property name="text">
       <string>Connect</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="btndisconnect">
+     <property name="geometry">
+      <rect>
+       <x>650</x>
+       <y>33</y>
+       <width>121</width>
+       <height>41</height>
+      </rect>
+     </property>
+     <property name="cursor">
+      <cursorShape>PointingHandCursor</cursorShape>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">QPushButton{
+background-color: rgb(0, 54, 69);
+   border-radius: 10px;
+border-color: rgb(255, 85, 255);
+color: rgb(255, 255, 255);
+font: 10pt &quot;Comic Sans MS&quot;;
+}
+
+QPushButton::hover
+{
+border:0px;
+	
+	background-color: rgb(0, 121, 131);
+}
+QPushButton:pressed
+{
+border:1px solid rgb(0, 121, 131);
+background-color: rgb(179,250, 250);
+}</string>
+     </property>
+     <property name="text">
+      <string>Disconnect</string>
      </property>
     </widget>
    </widget>
